# autonomous_swarm_navigation

./: README.md  test.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/autobot_recog/lib/autobot_recog/: agent_node  (+7 more)
log/: latest_build
ppo_cartpole_gpu/: data  policy.optimizer.pth  policy.pth  system_info.txt
src/RL/: gazebo_rl_environment.py  test_velodyne_node.py  train_ppo.py  train_rl.py  train_velodyne_node.py
src/RL/ppo_gazebo_goal_agent/: data  policy.optimizer.pth  policy.pth  system_info.txt
src/RL/pytorch_models/: td3_velodyne_actor.pth  td3_velodyne_critic.pth
src/RL/results/: td3_velodyne.npy
src/RL/runs/: events.out.tfevents.1733517414.workstation.29534.0  events.out.tfevents.1733517493.workstation.30068.0  events.out.tfevents.1733517584.workstation.31082.0  events.out.tfevents.1733518017.workstation.34281.0  events.out.tfevents.1733518052.workstation.34972.0  events.out.tfevents.1733519068.workstation.43040.0  events.out.tfevents.1744309672.rudra-Victus-by-HP-Gaming-Laptop-15-fb0xxx.4677.0
src/autobot_recog/: package.xml  setup.cfg  setup.py
src/autobot_recog/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/autobot_recog/install/autobot_recog/lib/autobot_recog/: agent_node.py  image_save.py  move.py  multi_move.py
src/autobot_recog/install/autobot_recog/share/autobot_recog/: package.bash  package.dsv  package.ps1  package.sh  package.xml
src/autobot_recog/install/autobot_recog/share/autobot_recog/launch/: 1.launch.py  2.launch.py  4.launch.py  actor.launch.py  gazebo.launch.py  multi_bot.launch.py  multi_realsense_bot.launch.py  multi_turtlebot3.launch.py  multiple_bots.launch.py  office_launch.launch.py  robot_state_publisher.launch.py  rviz_gazebo_camera.launch.py  spawn_turtlebot3.launch.py  spawn_turtlebot_cam.launch.py  spawn_turtlebot_with_realsense.launch.py  spawn_yolobot.py  spawn_yolobot_launch.launch.py  spwan_turtlebot_cam.launch.py  turtlebot3_Office_world.launch.py  warehouse_launch.launch.py  world_launch.launch.py
src/autobot_recog/launch/: 1.launch.py  2.launch.py  4.launch.py  actor.launch.py  gazebo.launch.py  multi_bot.launch.py  multi_realsense_bot.launch.py  multi_turtlebot3.launch.py  multiple_bots.launch.py  office_launch.launch.py  rviz_gazebo_camera.launch.py  spawn_turtlebot3.launch.py  spawn_turtlebot_cam.launch.py  spawn_turtlebot_with_realsense.launch.py  turtlebot3_Office_world.launch.py  warehouse_launch.launch.py  world_launch.launch.py
src/autobot_recog/log/: latest_build
src/autobot_recog/scripts/: agent_node.py  chatbot.py  config.py  image0.py  image1.py  image_save.py  move.py  move0.py  move1.py  move2.py  multi_move.py  obj_detection_trainig.py
src/autobot_recog/urdf/: bot.sdf  camera.sdf  model.sdf  other.sdf  turtlebot3_camera.urdf  yolobot.urdf
src/autobot_recog/urdf/camera/: model.config
src/autobot_recog/urdf/realsense_bot/: model.config  model.sdf
src/autobot_recog/urdf/velodyne_bot/: model.config  model.sdf
src/autobot_recog/worlds/: office_world.world  warehouse.world  warehouse_large.world  warehouse_world.world
src/communication_msgs/: CMakeLists.txt  package.xml
src/communication_msgs/srv/: TaskAssignment.srv  TaskCompletion.srv
src/td3/: point_cloud2.py  test_velodyne_node.py  train_ppo.py  train_velodyne_node.py
src/td3/common/: settings.py
src/td3/drl_agent/: off_policy_agent.py  td3.py
(+124 files in other folders)
