<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autobot_recog</name>
  <version>0.0.1</version>
  <description>A package for autonomous robot recognition tasks in ROS 2.</description>
  <maintainer email="b22me002@iitj.ac.in">host</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <build_depend>ament_python</build_depend>
  <build_depend>rclpy</build_depend>

  <!-- Run dependencies -->
  <exec_depend>rclpy</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>setuptools</buildtool_depend>
  <depend>ament_cmake</depend>
  <depend>gazebo_dev</depend>
  <depend>ros-humble-gazebo-ros-pkgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
